CSS added to wrap the words correctly.

--- a/dcc-portal-ui/app/styles/_modules/_hide.scss
+++ b/dcc-portal-ui/app/styles/_modules/_hide.scss
@@ -17,6 +17,7 @@
 
 .t_sh {
   @include clearfix();
+  word-break: break-word;
 }
 
 .t_sh__hidden {
